# RAG-pipeline

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: search.py
